fixed issues i had but mvp and stretch are done

--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -1,13 +1,11 @@
 .App {
-  display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    text-align: center;
+  text-align: center;
 }
 .Header {
-  color: #fff;
-  text-shadow: 1px 1px 5px #FF0000;
+  color: #443e3e;
+  text-shadow: 1px 1px 5px #fff;
 }
+
 /* write your parent styles in here for your App.js */
 .ui.secondary.starwarsmenu.menu {
   background: black;
