--- a/starwars/src/index.css
+++ b/starwars/src/index.css
@@ -1,7 +1,9 @@
+@import url(https://fonts.googleapis.com/css?family=Orbitron:700);
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Orbitron', sans-serif;
   background-image: url('./sw-bg.jpg');
   background-size: cover;
 }
